panel_2 wrapping issue and removal of .left and .right classes in panels

--- a/app/stylesheets/fb_grid.sass
+++ b/app/stylesheets/fb_grid.sass
@@ -64,6 +64,10 @@ body
   z-index: 1
   width: 506.667px
   float: left
+  .right
+    float: right
+  .left
+    float: left
 
 #col_right
   position: relative
