--- a/app/stylesheets/grid.sass
+++ b/app/stylesheets/grid.sass
@@ -54,6 +54,10 @@ body
   z-index: 1
   width: 640px
   float: left
+  .right
+    float: right
+  .left
+    float: left
 
 #col_right
   position: relative
@@ -63,6 +67,7 @@ body
 
 .panel_1, #hotTopicBar
   +grid(8)
+
 .feature_bg
   .left
     +alpha
